[package]
name = "bevy_dojo"
version = "0.0.1"
authors = ["Okhai Omotuebe <okhaio@protonmail.com>"]
repository = "https://github.com/okhaimie-dev/bevy_dojo/"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "starknet", "blockchain"]
categories = ["game-development"]
edition = "2024"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# If your own code does CPU-intensive work, you might want to also enable some optimization for it.
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
  "bevy_log",
  "bevy_state",
  "serialize",
  "bevy_asset",
  "bevy_state",
  "bevy_color",
  "multi_threaded",
  "sysinfo_plugin",
] }

starknet = "0.15.1"
tokio = {version = "1.45.0", features = ["full"]}
